WebKit's intrinsic inline-size calculations don't account for whitespace before empty child with nonzero margins https://bugs.webkit.org/show_bug.cgi?id=183029 <rdar://problem/122586712>

Reviewed by Antti Koivisto.

While min/max-content widths are correctly computed, layout fails to ignore the empty
inline box generated by pseudo "after". It prevents us from being able to trim the
trailing whitespace making the inline box wrapped to the subsequent line.

* LayoutTests/fast/text/empty-trailing-content-trimming-expected.html: Added.
* LayoutTests/fast/text/empty-trailing-content-trimming.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::isNonContentRunsOnly):

Canonical link: https://commits.webkit.org/276875@main